--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,18 @@ sandbox/
 /docs/site/
 /docs/Manifest.toml
 .vscode
+
+sandbox/
+/docs/build/
+/docs/site/
+/docs/Manifest.toml
+.vscode
+/slides/src/*.png
+/slides/src/*.pdf
+/slides/src/*.xml
+/slides/src/_region_
+*.aux
+*.bbl
+*.toc
+*.out
+
