--- a/Project.toml
+++ b/Project.toml
@@ -10,6 +10,7 @@ Pluto = "c3e4b0f8-55cb-11ea-2926-15256bba5781"
 [compat]
 IJulia = "1.23"
 Pluto = "0.17"
+julia = "1.6"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
