--- a/notebooks/02_models/env/Project.toml
+++ b/notebooks/02_models/env/Project.toml
@@ -8,3 +8,5 @@ Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 UrlDownload = "856ac37a-3032-4c1c-9122-f86d88358c8b"
 
+[compat]
+julia = "1.6"
