--- a/notebooks/05_composition/env/Project.toml
+++ b/notebooks/05_composition/env/Project.toml
@@ -2,3 +2,6 @@
 MLJ = "add582a8-e3ab-11e8-2d5e-e98b27df1bc7"
 MLJDecisionTreeInterface = "c6f25543-311c-4c74-83dc-3ea6d1015661"
 MLJLinearModels = "6ee0df7b-362f-4a72-a706-9e79364fb692"
+
+[compat]
+julia = "1.6"
