--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,124 @@ sandbox/
 /docs/site/
 /docs/Manifest.toml
 .vscode
+
+slides/src/AnthonyFeedback.txt
+slides/src/IQVIA_logo.png
+slides/src/MLJLogo2.svg
+slides/src/MLJ_as_lego.pdf
+slides/src/ML_packages_in_julia.png
+slides/src/NESI-logo.jpg
+slides/src/PCA.png
+slides/src/PCA2.png
+slides/src/S1.png
+slides/src/S10.png
+slides/src/S11.png
+slides/src/S12.png
+slides/src/S13.png
+slides/src/S14.png
+slides/src/S2.png
+slides/src/S3.png
+slides/src/S4.png
+slides/src/S5.png
+slides/src/S6.png
+slides/src/S7.png
+slides/src/S8.png
+slides/src/S9.png
+slides/src/Sboston.png
+slides/src/Sforest.png
+slides/src/Sforest2.png
+slides/src/Sforest3.png
+slides/src/Stree.png
+slides/src/Stree2.png
+slides/src/Turing_logo.png
+slides/src/Tutorials
+slides/src/UoA_logo.png
+slides/src/X.png
+slides/src/_region_.aux
+slides/src/_region_.log
+slides/src/_region_.nav
+slides/src/_region_.out
+slides/src/_region_.pdf
+slides/src/_region_.snm
+slides/src/_region_.tex
+slides/src/_region_.toc
+slides/src/abstract.md
+slides/src/all_three.png
+slides/src/auto/
+slides/src/beamercolorthemeTuring.sty
+slides/src/beamerinnerthemeTuring.sty
+slides/src/beamerouterthemeTuring.sty
+slides/src/beamerthemeTuringDark.sty
+slides/src/beamerthemeTuringLight.sty
+slides/src/classifier.png
+slides/src/classifier.xml
+slides/src/code.tex
+slides/src/composite.png
+slides/src/composite.xml
+slides/src/demo.ipynb
+slides/src/demo.md
+slides/src/demo/
+slides/src/dim_reducer.png
+slides/src/dim_reducer.xml
+slides/src/features.md
+slides/src/images/
+slides/src/julia.png
+slides/src/just_right.png
+slides/src/kaggle1.png
+slides/src/kaggle2.png
+slides/src/kaggle3.png
+slides/src/lego.pdf
+slides/src/model_search.ipynb
+slides/src/model_search.jl
+slides/src/model_search.md
+slides/src/model_search.tex
+slides/src/model_search1.png
+slides/src/model_search2.png
+slides/src/model_search3.md
+slides/src/model_search3.png
+slides/src/most.stars.png
+slides/src/most_stars.pdf
+slides/src/most_stars.png
+slides/src/other_toolboxes.png
+slides/src/other_toolboxes/
+slides/src/overfitting1.png
+slides/src/overfitting2.png
+slides/src/overfitting3.png
+slides/src/overfitting4.png
+slides/src/overfitting5.png
+slides/src/overfitting6.png
+slides/src/p66tpwz7h6ed8r339blj.pdf
+slides/src/packages.jpg
+slides/src/performance.png
+slides/src/pipeline.png
+slides/src/pipelines.xml
+slides/src/poly.jl
+slides/src/r.png
+slides/src/raise_hand_forbidden.png
+slides/src/scitypes.png
+slides/src/separate.png
+slides/src/separate.xml
+slides/src/sk_open_issue.png
+slides/src/slides.aux
+slides/src/slides.log
+slides/src/slides.nav
+slides/src/slides.out
+slides/src/slides.pdf
+slides/src/slides.snm
+slides/src/slides.toc
+slides/src/tables.md
+slides/src/tablesmap.md
+slides/src/tableswordcloud.png
+slides/src/test.aux
+slides/src/test.log
+slides/src/test.pdf
+slides/src/test.tex
+slides/src/tour-2.md
+slides/src/tuning/
+slides/src/two_model_stack.png
+slides/src/two_model_stack_minus1.png
+slides/src/two_model_stack_minus2.png
+slides/src/using_tasks.jl
+slides/src/warwick.jpg
+slides/src/warwick.png
+slides/src/y.png
