--- a/Project.toml
+++ b/Project.toml
@@ -9,7 +9,7 @@ Pluto = "c3e4b0f8-55cb-11ea-2926-15256bba5781"
 
 [compat]
 IJulia = "1.23"
-Pluto = "0.17"
+Pluto = "0.17, 0.18"
 julia = "1.6"
 
 [extras]
